--- a/SurucuEhliyeti/SurucuEhliyeti/View/DersNotlari/TrafikIsaretleri/TrafikIsaretleriViewController.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/View/DersNotlari/TrafikIsaretleri/TrafikIsaretleriViewController.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TrafikIsaretleriViewController" customModule="SurucuEhliyeti" customModuleProvider="target">
             <connections>
-                <outlet property="trafikIsaretleriCollectionView" destination="DiR-k6-0sf" id="8jS-p4-O73"/>
+                <outlet property="trafikIsaretleriCollectionView" destination="bZd-JR-lGJ" id="gga-KV-Xsy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,10 +19,10 @@
             <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="DiR-k6-0sf">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bZd-JR-lGJ">
                     <rect key="frame" x="0.0" y="47" width="390" height="763"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N9r-65-PIu">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V6H-I5-Nah">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -33,10 +33,10 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DiR-k6-0sf" secondAttribute="trailing" id="XKa-Wk-3hg"/>
-                <constraint firstItem="DiR-k6-0sf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Ynu-ll-yyV"/>
-                <constraint firstItem="DiR-k6-0sf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="v5c-pI-UsM"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="DiR-k6-0sf" secondAttribute="bottom" id="vpF-IK-UXZ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="bZd-JR-lGJ" secondAttribute="trailing" id="VaB-4g-Gsz"/>
+                <constraint firstItem="bZd-JR-lGJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="lIt-fU-lJd"/>
+                <constraint firstItem="bZd-JR-lGJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qar-2g-juj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="bZd-JR-lGJ" secondAttribute="bottom" id="ul6-qO-o8P"/>
             </constraints>
             <point key="canvasLocation" x="-68" y="-12"/>
         </view>
